--- a/ui-angular/projects/smart-expandable-section/src/lib/expandable-section.component.css
+++ b/ui-angular/projects/smart-expandable-section/src/lib/expandable-section.component.css
@@ -9,3 +9,12 @@
 .mat-expansion-panel-header-title {
 	color: var(--primary-color);
 }
+
+.btn-container {
+	margin: 1em;
+	margin-right: 3em;
+}
+
+.btn {
+	border-radius: 24px;
+}
