--- a/ui-angular/projects/smart-toolbar/src/lib/smart-toolbar.component.html
+++ b/ui-angular/projects/smart-toolbar/src/lib/smart-toolbar.component.html
@@ -7,6 +7,7 @@
     <button
       *ngIf="button.style === ToolbarButtonStyle.MAT_RAISED_BUTTON"
       mat-raised-button
+      [ngClass]="{ 'btn-round': button.rounded }"
       color="{{ button.color }}"
       [disabled]="button.disabled"
       (click)="executeCommand(button)"
@@ -17,6 +18,7 @@
     <button
       *ngIf="button.style === ToolbarButtonStyle.MAT_BUTTON"
       mat-button
+      [ngClass]="{ 'btn-round': button.rounded }"
       color="{{ button.color }}"
       [disabled]="button.disabled"
       (click)="executeCommand(button)"
@@ -28,6 +30,7 @@
     <button
       *ngIf="button.style === ToolbarButtonStyle.MAT_STROKED_BUTTON"
       mat-stroked-button
+      [ngClass]="{ 'btn-round': button.rounded }"
       color="{{ button.color }}"
       [disabled]="button.disabled"
       (click)="executeCommand(button)"
@@ -39,6 +42,7 @@
     <button
       *ngIf="button.style === ToolbarButtonStyle.MAT_FLAT_BUTTON"
       mat-flat-button
+      [ngClass]="{ 'btn-round': button.rounded }"
       color="{{ button.color }}"
       [disabled]="button.disabled"
       (click)="executeCommand(button)"
