--- a/ui-angular/projects/smart-toolbar/src/lib/smart-toolbar.component.html
+++ b/ui-angular/projects/smart-toolbar/src/lib/smart-toolbar.component.html
@@ -10,7 +10,7 @@
       [ngClass]="{ 'btn-round': button.rounded }"
       color="{{ button.color }}"
       [disabled]="button.disabled"
-      (click)="executeCommand(button)"
+      (click)="button.btnAction.execute()"
     >
       {{ button.label }} <mat-icon>{{ button.icon }}</mat-icon>
     </button>
@@ -21,7 +21,7 @@
       [ngClass]="{ 'btn-round': button.rounded }"
       color="{{ button.color }}"
       [disabled]="button.disabled"
-      (click)="executeCommand(button)"
+      (click)="button.btnAction.execute()"
     >
       {{ button.label }} <mat-icon>{{ button.icon }}</mat-icon>
     </button>
@@ -33,7 +33,7 @@
       [ngClass]="{ 'btn-round': button.rounded }"
       color="{{ button.color }}"
       [disabled]="button.disabled"
-      (click)="executeCommand(button)"
+      (click)="button.btnAction.execute()"
     >
       {{ button.label }} <mat-icon>{{ button.icon }}</mat-icon>
     </button>
@@ -45,7 +45,7 @@
       [ngClass]="{ 'btn-round': button.rounded }"
       color="{{ button.color }}"
       [disabled]="button.disabled"
-      (click)="executeCommand(button)"
+      (click)="button.btnAction.execute()"
     >
       {{ button.label }} <mat-icon>{{ button.icon }}</mat-icon>
     </button>
@@ -56,7 +56,7 @@
       mat-icon-button
       color="{{ button.color }}"
       [disabled]="button.disabled"
-      (click)="executeCommand(button)"
+      (click)="button.btnAction.execute()"
     >
       <mat-icon>{{ button.icon }}</mat-icon>
     </button>
@@ -67,7 +67,7 @@
       mat-fab
       color="{{ button.color }}"
       [disabled]="button.disabled"
-      (click)="executeCommand(button)"
+      (click)="button.btnAction.execute()"
     >
       <mat-icon>{{ button.icon }}</mat-icon>
     </button>
@@ -78,7 +78,7 @@
       mat-mini-fab
       color="{{ button.color }}"
       [disabled]="button.disabled"
-      (click)="executeCommand(button)"
+      (click)="button.btnAction.execute()"
     >
       <mat-icon>{{ button.icon }}</mat-icon>
     </button>
