--- a/ui-angular/projects/smart-navbar/src/lib/smart-navbar.component.html
+++ b/ui-angular/projects/smart-navbar/src/lib/smart-navbar.component.html
@@ -1,14 +1,10 @@
 <mat-toolbar class="navbarHeight">
-    <img *ngIf="smartNavbar.icon" src="{{ smartNavbar.icon }}" alt="" (click)="onIconClick()" />
-    <span class="spacer"></span>
+    <img *ngIf="smartNavbar.icon" class="title" src="{{ smartNavbar.icon }}" alt="" (click)="onIconClick()" />
+    <ng-content select="[titleComponent]" class="title"></ng-content>
     <div *ngIf="smartNavbar.searchBar" class="input">
         <input type="text" placeholder="{{ smartNavbar.searchBar.placeholder }}" />
-        <div
-            *ngIf="
-                smartNavbar.searchBar.quickFilterLabel && smartNavbar.searchBar.quickFilters.length
-            "
-            class="drop_down_btn"
-        >
+        <div *ngIf="smartNavbar.searchBar.quickFilterLabel && smartNavbar.searchBar.quickFilters.length"
+            class="drop_down_btn">
             <button mat-button>
                 {{ smartNavbar.searchBar.quickFilterLabel }}
                 <mat-icon>arrow_drop_down</mat-icon>
@@ -24,8 +20,13 @@
             </button>
         </div>
     </div>
-    <span class="spacer"></span>
-    <div *ngIf="smartNavbar.userSettings" class="account-btn">
+    <div *ngIf="smartNavbar.userSettings" class="account-content">
+        <button mat-button *ngIf="smartNavbar?.notification" [color]="smartNavbar.notification?.iconColor"
+            (click)="onNotificationClick()">
+            <mat-icon>
+                {{ smartNavbar.notification?.icon }}
+            </mat-icon>
+        </button>
         <button mat-button color="primary">
             <mat-icon *ngIf="smartNavbar.userSettings.icon">
                 {{ smartNavbar.userSettings.icon }}
